Add animation + end layout

--- a/src/locales/ru/home.json
+++ b/src/locales/ru/home.json
@@ -1,3 +1,4 @@
 {
-  "historicalDates": "Исторические<br />даты"
+  "historicalDates": "Исторические<br />даты",
+  "progress": "{{ current }}/{{ total }}"
 }
